--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Trang web của tôi</title>
+    <title>JLX service website</title>
 </head>
 <body>
-    <h1>Chào mừng đến với trang web của tôi!</h1>
+    <h1>Chào mừng đến với jlx service</h1>
 </body>
 </html>
