--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>JLX service website</title>
 </head>
 <body>
-    <h1>Chào mừng đến với jlx service</h1>
+    <h1>jlx service</h1>
 </body>
 </html>
