--- a/index.html
+++ b/index.html
@@ -1,10 +1,50 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="vi">
 <head>
-    <title>JLX service website</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>jlx.vn - giới thiệu</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: arial, sans-serif;
+            background-color: #0b0c0e;
+            color: #b0bec5;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+        .container {
+            padding: 20px;
+        }
+        h1 {
+            font-size: 3em;
+            color: #b0bec5;
+            margin: 0;
+            text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7),
+                         -2px -2px 6px rgba(128, 128, 128, 0.3); /* Đổ bóng đen và ánh xám, góc 30 độ phía trước bên trái */
+        }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2em;
+                text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7),
+                             -1.5px -1.5px 4px rgba(128, 128, 128, 0.3);
+            }
+        }
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.5em;
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7),
+                             -1px -1px 3px rgba(128, 128, 128, 0.3);
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>jlx service</h1>
+    <div class="container">
+        <h1>jlx.vn</h1>
+    </div>
 </body>
 </html>
-
