--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <body>
     <div class="container">
         <h1>jlx.vn</h1>
+        <p style="color: #b0bec5;">jlx.service@outlook.com</p>
     </div>
 </body>
 </html>
